--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>javax.servlet</groupId> -->
-		<!-- <artifactId>jstl</artifactId> -->
-		<!-- <version>1.2</version> -->
-		<!-- </dependency> -->
+		
+	 <dependency> 
+		 <groupId>javax.servlet</groupId> 
+		 <artifactId>jstl</artifactId> 
+		<version>1.2</version>
+	</dependency> 
 
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
