--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-		
+		 <dependency>
+            <groupId>com.github.jsimone</groupId>
+            <artifactId>webapp-runner</artifactId>
+            <version>7.0.22.3</version>
+            <scope>provided</scope>
+        </dependency>
 	 <dependency> 
 		 <groupId>javax.servlet</groupId> 
 		 <artifactId>jstl</artifactId> 
