--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,10 @@
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.2</version>
+				 <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
             <plugin>
             <groupId>org.apache.maven.plugins</groupId>
